test: add delete non-existent and controller validation error scenarios